--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="btnDltTask">Delete Task</string>
     <string name="btnClrTask">Clear Task</string>
     <string-array name="spinner">
-        <item>Add new Task</item>
+        <item>Add a new Task</item>
         <item>Remove a Task</item>
     </string-array>
 </resources>
